@@ -251,11 +251,13 @@ pyg_flags_add (PyObject *   module,
       Py_DECREF(intval);
 
       if (module) {
-          PyModule_AddObject(module,
-                             pyg_constant_strip_prefix(eclass->values[i].value_name,
-                                                       strip_prefix),
-                             item);
-          Py_INCREF(item);
+	  char *prefix;
+	  
+	  prefix = g_strdup(pyg_constant_strip_prefix(eclass->values[i].value_name, strip_prefix));
+	  PyModule_AddObject(module, prefix, item);
+	  g_free(prefix);
+	  
+	  Py_INCREF(item);
       }
     }
     
